--- a/index.html
+++ b/index.html
@@ -2011,11 +2011,11 @@
                 </div>
                 <div class="tp-footer-widget__list">
                   <ul>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="index.html#service-area">Our Services</a></li>
+                    <li><a href="index.html#portfolio-area">Portfolio</a></li>
                     <li><a href="academy.html">Academy</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="index.html#reviews-area">Reviews</a></li>
+                    <li><a href="index.html#contact-area">Contact us</a></li>
                   </ul>
                 </div>
               </div>
